[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyAxeTool"
version = "1.1.1"
authors = [
  { name="Sun Jin", email="412640665@qq.com" },
]
description = "An utility tool collection for make life easily"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
  "PyAxe>=1.0.32",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sunjinopensource/PyAxeTool"
"Bug Tracker" = "https://github.com/sunjinopensource/PyAxeTool/issues"